--- a/k8s/k8netcorev1/charts/frontend/templates/frontend.yaml
+++ b/k8s/k8netcorev1/charts/frontend/templates/frontend.yaml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
       - name: k8-frontend-app
-        image: k8.demo.frontend:v1
+        image: com.io/k8.demo.frontend:v1
         resources:
           limits:
             memory: "128Mi"
