--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,13 @@ version: '3.4'
 
 services:
   base:
-    image: k8.demo.base:v1
+    image: com.io/k8.demo.base:v1
     build:
       context: .
       dockerfile: Dockerfile.base
 
   frontend:
-    image: k8.demo.frontend:v1
+    image: com.io/k8.demo.frontend:v1
     build:
       context: .
       dockerfile: src/K8.FrontEnd/Dockerfile
@@ -19,7 +19,7 @@ services:
       - "5000:5000"
 
   cronjobs:
-    image: k8.demo.cronjobs:v1
+    image: com.io/k8.demo.cronjobs:v1
     build:
       context: .
       dockerfile: src/K8.LongProcess/Dockerfile
