--- a/k8s/k8netcorev1/charts/frontend/templates/ingress.yaml
+++ b/k8s/k8netcorev1/charts/frontend/templates/ingress.yaml
@@ -6,7 +6,7 @@ metadata:
       kubernetes.io/ingress.class: nginx
 spec:
   rules:
-  - host: k8-frontend-app.com
+  - host: k8-frontend-app.local
     http:
       paths:
       - backend:
