--- a/k8s/k8netcorev2/Chart.yaml
+++ b/k8s/k8netcorev2/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
 appVersion: "1.0"
 description: A Helm chart for K8 DotNetCore applications
-name: k8demov1
-version: 1.0.0
+name: k8netcorev2
+version: 2.0.0
