--- a/src/K8.LongProcess/appsettings.json
+++ b/src/K8.LongProcess/appsettings.json
@@ -1,9 +1,11 @@
 {
+  "AzureVaultUrl": "https://{name}.vault.azure.net/",
+
   "Logging": {
-      "LogLevel": {
-        "Default": "Information",
-        "Microsoft": "Warning",
-        "Microsoft.Hosting.Lifetime": "Information"
-      }
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
+  }
 }
