timeouts for livness and health checks

--- a/k8s/k8netcorev2/charts/frontend/templates/frontend.yaml
+++ b/k8s/k8netcorev2/charts/frontend/templates/frontend.yaml
@@ -31,10 +31,16 @@ spec:
             httpGet:
               path: /liveness
               port: http
+            initialDelaySeconds: 30
+            periodSeconds: 10
+            timeoutSeconds: 90
           readinessProbe:
             httpGet:
               path: /healthy
               port: http
+            initialDelaySeconds: 30
+            periodSeconds: 10
+            timeoutSeconds: 90
           resources:
 {{ toYaml .Values.resources | indent 12 }}
 
