--- a/k8s/k8netcorev2/charts/frontend/templates/frontend.yaml
+++ b/k8s/k8netcorev2/charts/frontend/templates/frontend.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: {{ template "frontend.fullname" . }}
   labels:
-    app: {{ template "frontend.name" . }}
+    app: {{ template "frontend.fullname" . }}
     chart: {{ template "frontend.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
@@ -11,12 +11,12 @@ spec:
   replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
-      app: {{ template "frontend.name" . }}
+      app: {{ template "frontend.fullname" . }}
       release: {{ .Release.Name }}
   template:
     metadata:
       labels:
-        app: {{ template "frontend.name" . }}
+        app: {{ template "frontend.fullname" . }}
         release: {{ .Release.Name }}
     spec:
       containers:
