adding azure storage healthcheck and modifying the documentation

--- a/src/K8.FrontEnd/appsettings.json
+++ b/src/K8.FrontEnd/appsettings.json
@@ -1,5 +1,8 @@
 {
-  "AzureVaultUrl": "https://{name}.vault.azure.net/",
+  "AzureVaultUrl": "https://[name].vault.azure.net/",
+
+  "AzureStorageConnection": "",
+  "AzureStorageName": "k8demostorage",
 
   "Logging": {
     "LogLevel": {
