--- a/src/K8.FrontEnd/appsettings.json
+++ b/src/K8.FrontEnd/appsettings.json
@@ -1,8 +1,8 @@
 {
-  "AzureVaultUrl": "https://[name].vault.azure.net/",
+  "AzureVaultUrl": "https://k8demovault.vault.azure.net/",
 
   "AzureStorageConnection": "",
-  "AzureStorageName": "k8demostorage",
+  "AzureStorageName": "",
 
   "Logging": {
     "LogLevel": {
