--- a/src/K8.LongProcess/appsettings.json
+++ b/src/K8.LongProcess/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "AzureVaultUrl": "https://{name}.vault.azure.net/",
+  "AzureVaultUrl": "https://k8demovault.vault.azure.net/",
 
   "Logging": {
     "LogLevel": {
