--- a/src/K8.LongProcess/K8.LongProcess.csproj
+++ b/src/K8.LongProcess/K8.LongProcess.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.9.5" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\K8.Extensions.Hosting\K8.Extensions.Hosting.csproj" />
   </ItemGroup>
 
