--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -27,13 +27,23 @@ ONBUILD ARG PAT
 ONBUILD ARG FEED
 ONBUILD ENV VSS_NUGET_EXTERNAL_FEED_ENDPOINTS "{\"endpointCredentials\": [{\"endpoint\":\"${FEED}\", \"username\":\"build\", \"password\":\"${PAT}\"}]}"
 
-# if custom nuget feed is used enable this check. enabling this breaks vs.net
-# ONBUILD RUN if [ -z "$PAT" ]; then \
-#       echo "\e[31mMake sure the PAT environment variable has been provided.\e[0m" \
-#       && exit 1; \
-#    fi
+ONBUILD RUN if [ -z "$PAT" ]; then \
+      echo "\e[31mMake sure the PAT environment variable has been provided.\e[0m" \
+      && exit 1; \
+   fi
 
 #NUGET
+
+ONBUILD ARG MSI_ENDPOINT
+ONBUILD ARG MSI_SECRET
+
+ONBUILD RUN if [ -z "$MSI_ENDPOINT" ]; then \
+      echo "\e[31mMake sure the appauthentication is started.\e[0m" \
+      && exit 1; \
+   fi
+
+ONBUILD ENV ENV MSI_ENDPOINT=${MSI_ENDPOINT}
+ONBUILD ENV MSI_SECRET=${MSI_SECRET}
 
 ONBUILD COPY ./build/ ./build/
 ONBUILD COPY ./Directory.Build.props ./Directory.Build.props
