couple of updates

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,9 +15,8 @@ services:
       args:
         PAT: ${PAT}
         FEED: ${FEED}
-    environment:
-     - MSI_ENDPOINT=${MSI_ENDPOINT}
-     - MSI_SECRET=${MSI_SECRET}
+        MSI_ENDPOINT: ${MSI_ENDPOINT}
+        MSI_SECRET: ${MSI_SECRET}
     ports:
       - "5000:5000"
 
@@ -29,6 +28,5 @@ services:
       args:
         PAT: ${PAT}
         FEED: ${FEED}
-    environment:
-     - MSI_ENDPOINT=${MSI_ENDPOINT}
-     - MSI_SECRET=${MSI_SECRET}
+        MSI_ENDPOINT: ${MSI_ENDPOINT}
+        MSI_SECRET: ${MSI_SECRET}
