fixing issues with the msi code

--- a/k8s/k8netcorev1/charts/cronjobs/templates/cronjob-convert.yaml
+++ b/k8s/k8netcorev1/charts/cronjobs/templates/cronjob-convert.yaml
@@ -17,6 +17,11 @@ spec:
           - name: convert-job
             image: com.io/k8.demo.cronjobs:v1
             command: ["./K8.LongProcess"]
+            env:
+              - name: MSI_ENDPOINT
+                value: http://host.docker.internal:5050/oauth2/token
+              - name: MSI_SECRET
+                value: 19603b25-f198-4156-a82a-b68d40681455
             args:
             - "-t Convert"
             - "-d 10"
