--- a/src/K8.FrontEnd/appsettings.json
+++ b/src/K8.FrontEnd/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "AzureVaultUrl": "https://k8demovault.vault.azure.net/",
+  "AzureVaultUrl": "https://k8demovault1.vault.azure.net/",
 
   "AzureStorageConnection": "",
   "AzureStorageName": "",
