--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,9 @@ services:
       args:
         PAT: ${PAT}
         FEED: ${FEED}
-        MSI_ENDPOINT: ${MSI_ENDPOINT}
-        MSI_SECRET: ${MSI_SECRET}
+    environment:
+      - MSI_ENDPOINT=${MSI_ENDPOINT}
+      - MSI_SECRET=${MSI_SECRET}
     ports:
       - "5000:5000"
 
@@ -28,5 +29,6 @@ services:
       args:
         PAT: ${PAT}
         FEED: ${FEED}
-        MSI_ENDPOINT: ${MSI_ENDPOINT}
-        MSI_SECRET: ${MSI_SECRET}
+    environment:
+      - MSI_ENDPOINT=${MSI_ENDPOINT}
+      - MSI_SECRET=${MSI_SECRET}
