--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -14,5 +14,7 @@
     "redhat.vscode-yaml",
     "streetsidesoftware.code-spell-checker",
     "technosophos.vscode-helm",
+    "ms-azuretools.vscode-azureterraform",
+    "mauve.terraform"
   ]
 }
